--- a/TODOlists.codawebscriptsidebar/styles-0.css
+++ b/TODOlists.codawebscriptsidebar/styles-0.css
@@ -27,7 +27,7 @@ body {
 
 header {
 	width: 100%;
-	height: 30px;
+	height: 50px;
 	padding: 4px 15px;
 	text-align: right;
 	position: fixed;
@@ -108,7 +108,7 @@ select:focus {
 /* @group main */
 
 main {
-	margin: 30px 0;
+	margin: 50px 0 30px;
 	padding: 0 15px;
 	height: calc(100% - 60px);
 	overflow-y: scroll;
