--- a/TODOlists.codawebscriptsidebar/styles-1.css
+++ b/TODOlists.codawebscriptsidebar/styles-1.css
@@ -29,7 +29,7 @@ body {
 
 header {
 	width: 100%;
-	height: 30px;
+	height: 50px;
 	padding: 5px 15px;
 	text-align: right;
 	position: fixed;
@@ -111,7 +111,7 @@ select:focus {
 /* @group main */
 
 main {
-	margin: 30px 0;
+	margin: 50px 0 30px;
 	padding: 0 15px 60px;
 	height: 100%;
 	overflow-y: scroll;
