--- a/TODOlists.codawebscriptsidebar/styles-1.css
+++ b/TODOlists.codawebscriptsidebar/styles-1.css
@@ -1,4 +1,4 @@
-/* note(@duncanmid): TODOLists - Coda 2 Sidebar Plugin v.1.1 | © D.G. Midwinter, @duncanmid */
+/* note(@duncanmid): TODOLists - Coda 2 Sidebar Plugin v.1.2 | © D.G. Midwinter, @duncanmid */
 
 /* @group globals */
 
@@ -38,8 +38,8 @@ header {
 	background-color: #2A3B49;
 	box-shadow: 0 0 10px rgba(0,0,0,.25);
 	z-index: 1;
-	overflow-x: scroll;
 	white-space: nowrap;
+	overflow: hidden;
 }
 
 select {
@@ -87,6 +87,7 @@ select:focus {
 	position: absolute;
 	top: 0;
 	right: 8px;
+	pointer-events: none;
 }
 
 #comment-type-color {
@@ -361,7 +362,7 @@ footer.revealed .options-svg {
 
 
 #sample,
-#twitter {
+#mastodon {
 	float: right;
 	border: 0;
 	background-color: #293B48;
@@ -372,7 +373,7 @@ footer.revealed .options-svg {
 }
 
 #sample:active,
-#twitter:active {
+#mastodon:active {
 	opacity: .6;
 }
 
